smooth behaviour anchor transmission problem and src were fixed on safari

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -65,6 +65,7 @@ body {
 }
 
 .nav__item {
+    cursor: pointer;
     white-space: nowrap;
     flex: 1;
     color: var(--secondary);
