--- a/src/scss/base/_defaultStyle.scss
+++ b/src/scss/base/_defaultStyle.scss
@@ -80,6 +80,6 @@ input:-webkit-autofill:active {
     background-color: transparent !important;
 }
 
-* {
-    scroll-behavior: smooth;
-}
+// * {
+//     scroll-behavior: smooth;
+// }
